CI is successful 4

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,14 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
+      - name: Repositoryni yuklash
+      - uses: actions/checkout@v4
+      - with:
+      - fetch-depth: 0
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
