--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,8 +32,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-#      - name: Run Tests
-#        run: ./gradlew test --no-daemon
+      - name: Run Tests
+        run: ./gradlew test --no-daemon
 
       - name: Build my Project
         run: ./gradlew build --no-daemon
