--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-name: Todo CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,19 +9,16 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: self-hosted
-    steps:
-      - name: Repositoryni yuklash
-        uses: actions/checkout@v4
-        with:
-            fetch-depth: 0
+  build:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
 
-      - name: Checkout Code
+    steps:
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -29,68 +26,38 @@ jobs:
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permission for Gradle
         run: chmod +x gradlew
 
-      - name: Run Tests
-        run: ./gradlew test --no-daemon
+      - name: Build with Gradle
+        run: ./gradlew build -x test
 
-      - name: Build my Project
-        run: ./gradlew build --no-daemon
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Resource fayllarni saqlash
-        uses: actions/upload-artifact@v4
-        with:
-          name: todo-resources
-          path: src/main/resources/
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/todo_app:latest .
 
-      - name: Build natijasini saqlash
-        uses: actions/upload-artifact@v4
-        with:
-          name: todo-jar
-          path: build/libs/*.jar
-
-      - name: Docker composeni clone qlsh
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-compose
-          path: docker-compose.yaml
-
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/todo_app:latest
 
   deploy:
-    needs: test
-    runs-on: self-hosted
+    name: Deploy to Server
+    needs: build
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Build natijasini yuklash
-        uses: actions/download-artifact@v4
+      - name: SSH into Server and Deploy
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          name: todo-jar
-          path: ~/actions-runner/_work/Todo/Todo/build/libs/
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/todo_app:latest
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d --name myapp -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/todo_app:latest
 
-      - name: Resource fayllarni yuklash
-        uses: actions/download-artifact@v4
-        with:
-          name: todo-resources
-          path: ~/actions-runner/_work/Todo/Todo/src/main/resources/
 
-      - name: Deploy qilish
-        run: |
-          pwd
-          ls -hal
-
-          rm -f Todo-0.0.1-SNAPSHOT.jar || true
-          mv ~/actions-runner/_work/Todo/Todo/build/libs/Todo-0.0.1-SNAPSHOT.jar .
-          docker-compose down || true
-          docker-compose up -d --build
-          java -jar Todo-0.0.1-SNAPSHOT.jar spring.profiles.active=product
-#          echo "${{ secrets.SERVER_PASSWORD }}" | sudo -S systemctl restart todo
