--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,17 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'uz.salikhdev'
 version = '0.0.1-SNAPSHOT'
+
+jacoco {
+    toolVersion = "0.8.12"
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+}
 
 java {
     toolchain {
@@ -54,6 +60,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.2")
+    testImplementation("org.assertj:assertj-core:3.24.2")
 
     // Test Containers
     implementation(platform("org.testcontainers:testcontainers-bom:1.17.6"))
@@ -64,4 +72,39 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+tasks.jacocoTestCoverageVerification {
+    dependsOn tasks.test
+    violationRules {
+        rule {
+            element = 'CLASS'
+            includes = ['uz.salikhdev.todo.service.*']
+            excludes = [
+                    'uz.salikhdev.todo.controller.*',
+                    'uz.salikhdev.todo.dto.*',
+                    'uz.salikhdev.todo.config.*',
+                    'uz.salikhdev.todo.entitiy.*',
+                    'uz.salikhdev.todo.exception.*',
+                    'uz.salikhdev.todo.mapper.*',
+                    'uz.salikhdev.todo.repository.*'
+            ]
+            limit {
+                minimum = 0.4
+            }
+        }
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+}
+
+tasks.bootJar {
+    archiveFileName.set("service.jar")
 }
